--- a/polity/templates/polity/polities.html
+++ b/polity/templates/polity/polities.html
@@ -6,6 +6,8 @@
     <th class="th_ccell"><h4>NAME</h4></th>
     <th class="th_ccell"><h4>FORM OF GOVERNMENT</h4></th>
     <th class="th_ccell"><h4>ALIGNMENT</h4></th>
+    <th class="th_ccell"><h4>TREASURY</h4></th>
+    <th class="th_ccell"><h4>UNREST</h4></th>
     <th class="th_ccell"><h4>TAX LEVEL</h4></th>
     <th class="th_ccell"><h4>ATTITUDE</h4></th>
     <th class="th_ccell"><h4>HOLIDAY FREQUENCY</h4></th>
@@ -26,6 +28,8 @@
                     {{ polity.alignment_lc.name }} {{ polity.alignment_ge.name }}
                 {% endif %}
             </td>
+            <td class="tb_ccell">{{ polity.treasury }}</td>
+            <td class="tb_ccell">{{ polity.unrest }}</td>
             <td class="tb_ccell">{{ polity.tax_edict.tax_level }}</td>
             <td class="tb_ccell">{{ polity.promotion_edict.attitude }}</td>
             <td class="tb_ccell">{{ polity.holiday_edict.frequency }}</td>
