--- a/templates/base.html
+++ b/templates/base.html
@@ -32,6 +32,11 @@
                 <ul class="nav nav-pills">
                     <li role="presentation"><a href="{% url 'core:home' %}">Home</a></li>
                     <li role="presentation"><a href="{% url 'polity:polities' %}">Polities</a></li>
+                    <li role="presentation">
+                        <a href="{% url 'diplomacy:diplomatic_relations' %}">
+                            Diplomacy
+                        </a>
+                    </li>
                     <li role="presentation"><a href="{% url 'events:events' %}">Events</a></li>
                     <li role="presentation"><a href="{% url 'people:people' %}">People</a></li>
                     <li role="presentation">
