--- a/templates/base.html
+++ b/templates/base.html
@@ -40,6 +40,11 @@
                     <li role="presentation"><a href="{% url 'events:events' %}">Events</a></li>
                     <li role="presentation"><a href="{% url 'people:people' %}">People</a></li>
                     <li role="presentation">
+                        <a href="{% url 'settlements:settlements' %}">
+                        Settlements
+                        </a>
+                    </li>
+                    <li role="presentation">
                         <a href="{% url 'territory:territories' %}">
                             Territories
                         </a>
