--- a/settlements/templates/settlements/settlements.html
+++ b/settlements/templates/settlements/settlements.html
@@ -3,17 +3,23 @@
 {% extends 'settlements/base.html' %}
 
 {% block table_header %}
-    <th class="th_ccell"><h4>OWNER</h4></th>
-    <th class="th_ccell"><h4>NAME</h4></th>
-    <th class="th_ccell"><h4></h4></th>
+    <th><h4>OWNER</h4></th>
+    <th><h4>NAME</h4></th>
+    <th><h4>TYPE</h4></th>
+    <th><h4>DISTRICTS</h4></th>
+    <th><h4>LOTS</h4></th>
+    <th><h4></h4></th>
 {% endblock %}
 
 {% block table_body %}
     {% for settlement in settlements %}
-        <tr>
-            <td class="tb_ccell">{{ settlement.territory.polity.name }}</td>
-            <td class="tb_ccell">{{ settlement.name }}</td>
-            <td class="tb_ccell">
+        <tr class="clickable-row" style="cursor: pointer;" data-href="{% url 'settlements:settlement_details' settlement_id=settlement.pk %}">
+            <td>{{ settlement.territory.polity.name }}</td>
+            <td>{{ settlement.name }}</td>
+            <td>{{ settlement.type.name }}</td>
+            <td>{{ settlement.districts }}</td>
+            <td>{{ settlement.lots }}</td>
+            <td>
                 {% if user.is_authenticated %}
                     <a class="btn btn-default" href="{% url 'settlements:settlement_edit' pk=settlement.pk %}">
                         <span class="glyphicon glyphicon-pencil"></span>
