--- a/templates/table.html
+++ b/templates/table.html
@@ -4,7 +4,7 @@
 
 {% block content %}
     <div class="well well-large">
-        <table>
+        <table class="table table-striped table-hover table-bordered table-responsive">
             <thead>
             <tr>
                 {% block table_header %}
