--- a/settlements/templates/settlements/buildings.html
+++ b/settlements/templates/settlements/buildings.html
@@ -9,13 +9,13 @@
 {% endblock %}
 
 {% block table_body %}
-    {% for building in settlement.buildings %}
-        <tr class="clickable-row" style="cursor: pointer;" data-href="{% url 'settlements:building_edit' pk=building.pk %}">
+    {% for building in buildings %}
+        <tr class="clickable-row" style="cursor: pointer;" data-href="{% url 'settlements:building_edit' pk=building.pk settlement_id=settlement_id %}">
             <td>{{ building.name }}</td>
-            <td>{{ settlement.type.name }}</td>
+            <td>{{ building.type.name }}</td>
             <td>
                 {% if user.is_authenticated %}
-                    <a class="btn btn-default" href="{% url 'settlements:building_delete' pk=building.pk %}">
+                    <a class="btn btn-default" href="{% url 'settlements:building_delete' pk=building.pk settlement_id=settlement_id %}">
                         <span class="glyphicon glyphicon-trash"></span>
                     </a>
                 {% endif %}
