--- a/settlements/templates/settlements/settlements.html
+++ b/settlements/templates/settlements/settlements.html
@@ -13,7 +13,7 @@
 
 {% block table_body %}
     {% for settlement in settlements %}
-        <tr class="clickable-row" style="cursor: pointer;" data-href="{% url 'settlements:settlement_details' settlement_id=settlement.pk %}">
+        <tr class="clickable-row" style="cursor: pointer;" data-href="{% url 'settlements:buildings' settlement_id=settlement.pk %}">
             <td>{{ settlement.territory.polity.name }}</td>
             <td>{{ settlement.name }}</td>
             <td>{{ settlement.type.name }}</td>
