--- a/settlements/templates/settlements/base.html
+++ b/settlements/templates/settlements/base.html
@@ -4,4 +4,5 @@
 
 {% block subnav_items %}
     <li class="disabled"><a href="#">|</a></li>
+    {% block back_button %}{% endblock %}
 {% endblock %}
