--- a/settlements/templates/settlements/buildings.html
+++ b/settlements/templates/settlements/buildings.html
@@ -2,9 +2,15 @@
 
 {% extends 'settlements/base.html' %}
 
+{% block back_button %}
+<li role="presentation"><a href="{% url 'settlements:settlements' %}">Back</a></li>
+{% endblock %}
+
 {% block table_header %}
     <th><h4>NAME</h4></th>
     <th><h4>TYPE</h4></th>
+    <th><h4>LOTS</h4></th>
+    <th><h4>EFFECTS</h4></th>
     <th><h4></h4></th>
 {% endblock %}
 
@@ -13,6 +19,14 @@
         <tr class="clickable-row" style="cursor: pointer;" data-href="{% url 'settlements:building_edit' pk=building.pk settlement_id=settlement_id %}">
             <td>{{ building.name }}</td>
             <td>{{ building.type.name }}</td>
+            <td>
+                {% if building.lots is not None %}
+                    {{ building.lots }}
+                {% else %}
+                    {{ building.type.lots }}
+                {% endif %}
+            </td>
+            <td>{{ building.effects_summary }}</td>
             <td>
                 {% if user.is_authenticated %}
                     <a class="btn btn-default" href="{% url 'settlements:building_delete' pk=building.pk settlement_id=settlement_id %}">
