--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
     </script>
     <script>
         jQuery(document).ready(function($) {
-            $(".clickable-row").click(function() {
+            $(".clickable-object").click(function() {
                 window.location = $(this).data("href");
             });
         });
