--- a/territory/templates/territory/territories.html
+++ b/territory/templates/territory/territories.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 
 {% extends 'territory/base.html' %}
+{% load staticfiles %}
 
 {% block table_header %}
     <th class="th_ccell"><h4>POLITY</h4></th>
@@ -8,6 +9,7 @@
     <th class="th_ccell"><h4>TYPE</h4></th>
     <th class="th_ccell"><h4>FEATURES</h4></th>
     <th class="th_ccell"><h4>IMPROVEMENTS</h4></th>
+    <th class="th_ccell"><h4>SETTLEMENT</h4></th>
     <th class="th_ccell"><h4>EFFECTS</h4></th>
     <th class="th_ccell"><h4></h4></th>
 {% endblock %}
@@ -20,6 +22,20 @@
             <td class="tb_ccell">{{ territory.type }}</td>
             <td class="tb_ccell">{{ territory.features.all|join:", " }}</td>
             <td class="tb_ccell">{{ territory.improvements.all|join:", " }}</td>
+            <td class="tb_ccell">
+                {% if territory.the_settlement %}
+                    <div class="clickable-object" style="cursor: pointer;" data-href="{% url 'settlements:buildings' settlement_id=territory.the_settlement.pk %}">
+                    {% if territory.the_settlement.capital %}
+                        <img src="{% static 'img/glyphicons-halflings-211-king.png' %}" alt="My image"/>
+                        <b>{{ territory.the_settlement.name }}</b>
+                    {% else %}
+                        {{ territory.the_settlement.name }}
+                    {% endif %}
+                    </div>
+                {% else %}
+                    None
+                {% endif %}
+            </td>
             <td class="tb_ccell">{{ territory.effects_summary }}</td>
             <td class="tb_ccell">
                 {% if user.is_authenticated %}
