--- a/templates/base.html
+++ b/templates/base.html
@@ -39,6 +39,7 @@
                 <ul class="nav nav-pills">
                     <li role="presentation"><a href="{% url 'core:home' %}">Home</a></li>
                     <li role="presentation"><a href="{% url 'polity:polities' %}">Polities</a></li>
+                    <li role="presentation"><a href="{% url 'armies:armies' %}">Armies</a></li>
                     <li role="presentation">
                         <a href="{% url 'diplomacy:diplomatic_relations' %}">
                             Diplomacy
