Updated army view to include army attributes and commander.

--- a/armed_forces/templates/armed_forces/edit.html
+++ b/armed_forces/templates/armed_forces/edit.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-{% extends 'armies/base.html' %}
+{% extends 'armed_forces/base.html' %}
 
 {% block content %}
     <div class="well well-large">
