--- a/armed_forces/templates/armed_forces/base.html
+++ b/armed_forces/templates/armed_forces/base.html
@@ -4,4 +4,6 @@
 
 {% block subnav_items %}
     <li class="disabled"><a href="#">|</a></li>
+    <li role="presentation"><a href="{% url 'armed_forces:armed_forces' %}">Armed Forces</a></li>
+    <li role="presentation"><a href="{% url 'armed_forces:equipment' %}">Equipment</a></li>
 {% endblock %}
