Added commander boons.

--- a/armed_forces/templates/armed_forces/armed_forces.html
+++ b/armed_forces/templates/armed_forces/armed_forces.html
@@ -89,6 +89,8 @@
             </td>
             <td><h4>LEADERSHIP BONUS</h4></td>
             <td>{{ armed_force.leadership_bonus_string }}</td>
+            <td><h4>COMMANDER BOONS</h4></td>
+            <td>{{ armed_force.commander_boons }}</td>
             <td><h4>EQUIPMENT</h4></td>
             <td>{{ armed_force.equipment_string }}</td>
         </tr>
