--- a/armed_forces/templates/armed_forces/armed_forces.html
+++ b/armed_forces/templates/armed_forces/armed_forces.html
@@ -96,6 +96,8 @@
             <td>{{ armed_force.equipment_string }}</td>
             <td><h4>SPECIAL ABILITIES</h4></td>
             <td>{{ armed_force.special_abilities_string }}</td>
+            <td><h4>TACTICS KNOWN</h4></td>
+            <td>{{ armed_force.tactics_known_string }}</td>
         </tr>
     {% endfor %}
 {% endblock %}
