Added casualties with impact on recruitment.

--- a/polity/templates/polity/polity_details.html
+++ b/polity/templates/polity/polity_details.html
@@ -205,12 +205,12 @@
                         <td style="text-align: center;">{{ polity.elites_cr4 }}</td>
                     </tr>
                     <tr>
-                        <td style="text-align: right;"><b>AVAILABLE</b></td>
-                        <td style="text-align: center;">{{ polity.armed_forces_available }}</td>
-                        <td style="text-align: center;">{{ polity.manpower_available }}</td>
-                        <td style="text-align: center;">{{ polity.regulars_available }}</td>
-                        <td style="text-align: center;">{{ polity.elites_available }}</td>
-                        <td style="text-align: center;">{{ polity.militia_available }}</td>
+                        <td style="text-align: right;"><b>CASUALTIES</b></td>
+                        <td></td>
+                        <td style="text-align: center;">{{ polity.manpower_casualties }}</td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
                         <td></td>
                         <td></td>
                         <td></td>
@@ -218,12 +218,12 @@
                         <td style="text-align: center;">{{ polity.elites_cr5 }}</td>
                     </tr>
                     <tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
+                        <td style="text-align: right;"><b>AVAILABLE</b></td>
+                        <td style="text-align: center;">{{ polity.armed_forces_available }}</td>
+                        <td style="text-align: center;">{{ polity.manpower_available }}</td>
+                        <td style="text-align: center;">{{ polity.regulars_available }}</td>
+                        <td style="text-align: center;">{{ polity.elites_available }}</td>
+                        <td style="text-align: center;">{{ polity.militia_available }}</td>
                         <td></td>
                         <td></td>
                         <td></td>
