Tweaked casualty tracking against recruitment.

--- a/polity/templates/polity/polity_details.html
+++ b/polity/templates/polity/polity_details.html
@@ -208,11 +208,11 @@
                         <td style="text-align: right;"><b>CASUALTIES</b></td>
                         <td></td>
                         <td style="text-align: center;">{{ polity.manpower_casualties }}</td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
+                        <td style="text-align: center;">{{ polity.regulars_casualties }}</td>
+                        <td style="text-align: center;">{{ polity.elites_casualties }}</td>
+                        <td style="text-align: center;">{{ polity.militia_casualties }}</td>
+                        <td style="text-align: center;">{{ polity.conscripts_casualties }}</td>
+                        <td style="text-align: center;">{{ polity.allied_casualties }}</td>
                         <td></td>
                         <td style="text-align: center;"><b>CR 5</b></td>
                         <td style="text-align: center;">{{ polity.elites_cr5 }}</td>
