Added festivals with basic view (no mechanics).

--- a/templates/base.html
+++ b/templates/base.html
@@ -50,6 +50,7 @@
                         </a>
                     </li>
                     <li role="presentation"><a href="{% url 'events:events' %}">Events</a></li>
+                    <li role="presentation"><a href="{% url 'festivals:festivals' %}">Festivals</a></li>
                     <li role="presentation"><a href="{% url 'people:people' %}">People</a></li>
                     <li role="presentation">
                         <a href="{% url 'settlements:settlements' %}">
