Added fame/infamy as non-derived values to polity model.

--- a/polity/templates/polity/polities.html
+++ b/polity/templates/polity/polities.html
@@ -8,6 +8,8 @@
     <th class="th_ccell"><h4>ALIGNMENT</h4></th>
     <th class="th_ccell"><h4>TREASURY</h4></th>
     <th class="th_ccell"><h4>UNREST</h4></th>
+    <th class="th_ccell"><h4>FAME</h4></th>
+    <th class="th_ccell"><h4>INFAMY</h4></th>
     <th class="th_ccell"><h4>TAX LEVEL</h4></th>
     <th class="th_ccell"><h4>ATTITUDE</h4></th>
     <th class="th_ccell"><h4>HOLIDAY FREQUENCY</h4></th>
@@ -30,6 +32,8 @@
             </td>
             <td class="tb_ccell">{{ polity.treasury }}</td>
             <td class="tb_ccell">{{ polity.unrest }}</td>
+            <td class="tb_ccell">{{ polity.fame }}</td>
+            <td class="tb_ccell">{{ polity.infamy }}</td>
             <td class="tb_ccell">{{ polity.tax_edict.tax_level }}</td>
             <td class="tb_ccell">{{ polity.promotion_edict.attitude }}</td>
             <td class="tb_ccell">{{ polity.holiday_edict.frequency }}</td>
